<resources>
    <string name="app_name">VkApp1</string>
    <string name="list_menu_icon">list_menu_icon</string>
    <string name="list_menu_name">МЕНЮ</string>
    <string name="menu_tolist">К СПИСКУ</string>
    <string name="menu_accexit">Выйти с аккаунта</string>
    <string name="menu_loadall">Загрузить всё</string>
    <string name="menu_place">Место хранения</string>
    <string name="menu_theme">Сменить тему</string>
    <string name="menu_deleteall">Удалить всё</string>
    <string name="menu_about">О программе</string>
    <string name="about_text">Информация о приложении:</string>
    <string name="menu_listreload">Обновить список</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="search_string">Строка для поиска:</string>
    <string name="search_field">Поле для поиска:</string>
    <string name="search_search">Искать</string>
    <string name="search_reset">Сбросить поиск</string>
    <string name="login_login">Логин:</string>
    <string name="login_pass">Пароль:</string>
    <string name="login_go">Авторизоваться</string>
    <string name="theme_dark">Тёмная тема</string>
    <string name="theme_light">Светлая тема</string>
    <string name="place_path">Путь:</string>
    <string name="place_accept">Принять</string>
    <string name="sort_revers">В обратном порядке</string>
    <string name="sort_field">Поле для сортировки:</string>
    <string name="sort_sort">Сортировать</string>
    <string name="err_message">Ошибка авторизации</string>
    <string name="load_in_progress">Подождите, список обновляется</string>
    <string name="confirm">Удалить все аудиофайлы?</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="hello">hello</string>
    <string name="about_developer" translatable="false">MuzVK для Android\n
                                    Версия 1.0 (сборка 15)\n
                                    ----------------------------------------\n
                                    Приложение является продуктом курсового\n
                                    проекта по дисциплине:\n
                                    \"Технологии разработки ПО\"\n
                                    ----------------------------------------\n
                                    \n\n\n\n
                                    Обратная связь\n
                                    ----------------------------------------\n
                                    Разработчики приложения:\n
                                    <b>Невирковец Николай\n</b>
                                        email: mikola335@gmail.com\n
                                    <b>Майстренко Константин\n</b>
                                        email: const8my@gmail.com\n
                                    ----------------------------------------\n</string>
    <string name="load_cancelled">Загрузка завершена</string>
    <string name="list_refreshed">Список обновлён</string>
</resources>
