<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.vkapp1.SearchActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_string"
                android:id="@+id/textView4"
                android:textSize="25sp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="27dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editText2"
                android:inputType="text"
                android:background="#2e2e2e"
                android:textSize="25sp"
                android:layout_below="@+id/textView4"
                android:layout_marginTop="25dp"
                android:layout_alignStart="@+id/textView4"
                android:layout_alignEnd="@+id/textView4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_field"
                android:id="@+id/textView13"
                android:textSize="25sp"
                android:layout_below="@+id/editText2"
                android:layout_alignStart="@+id/editText2"
                android:layout_marginTop="30dp" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinner2"
                android:background="#2e2e2e"
                android:layout_marginTop="27dp"
                android:layout_below="@+id/textView13"
                android:layout_alignEnd="@+id/editText2"
                android:layout_alignStart="@+id/textView13" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_search"
                android:id="@+id/button2"
                android:layout_below="@+id/spinner2"
                android:layout_alignEnd="@+id/spinner2"
                android:layout_marginTop="29dp"
                android:onClick="onClickSearch" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_reset"
                android:id="@+id/button"
                android:layout_marginTop="27dp"
                android:layout_below="@+id/button2"
                android:layout_alignEnd="@+id/button2"
                android:onClick="onClickReset" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
