<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.vkapp1.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_login"
        android:id="@+id/textView14"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="30dp"
        android:textSize="30sp"
        android:textIsSelectable="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="Login"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_below="@+id/textView14"
        android:layout_alignStart="@+id/textView14"
        android:layout_marginTop="30dp"
        android:singleLine="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_pass"
        android:id="@+id/textView15"
        android:layout_marginTop="30dp"
        android:textSize="30sp"
        android:textIsSelectable="true"
        android:layout_below="@+id/editText"
        android:layout_alignStart="@+id/editText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText4"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/textView15"
        android:layout_alignStart="@+id/textView15"
        android:text="Password" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_go"
        android:id="@+id/button3"
        android:layout_below="@+id/editText4"
        android:layout_alignStart="@+id/editText4"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:layout_alignEnd="@+id/editText4"
        android:onClick="onClickAuth" />
</RelativeLayout>
