<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.vkapp1.MainActivity"
    android:weightSum="1"
    android:orientation="vertical"
    android:baselineAligned="false">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#0f0f0f"
        android:baselineAligned="true">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButtonToList"
            android:background="#00e53535"
            android:src="@drawable/menu_icon"
            android:contentDescription="@string/list_menu_icon"
            android:nestedScrollingEnabled="false"
            android:onClick="onClickMenu" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="К СПИСКУ"
            android:id="@+id/textViewToList"
            android:textSize="35sp"
            android:textIsSelectable="false"
            android:textAlignment="center"
            android:gravity="center_vertical"
            android:onClick="onClickMenu"
            android:nestedScrollingEnabled="false" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButtonExit"
            android:background="#00e53535"
            android:src="@drawable/menu_icon"
            android:contentDescription="@string/list_menu_icon"
            android:nestedScrollingEnabled="false"
            android:onClick="onClickMenu" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/menu_accexit"
            android:id="@+id/textViewExit"
            android:textSize="35sp"
            android:textIsSelectable="false"
            android:textAlignment="center"
            android:gravity="center_vertical"
            android:onClick="onClickMenu"
            android:nestedScrollingEnabled="false" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButtonLoad"
            android:background="#00e53535"
            android:src="@drawable/menu_icon"
            android:contentDescription="@string/list_menu_icon"
            android:nestedScrollingEnabled="false"
            android:onClick="onClickMenu" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/menu_loadall"
            android:id="@+id/textViewLoad"
            android:textSize="35sp"
            android:textIsSelectable="false"
            android:textAlignment="center"
            android:gravity="center_vertical"
            android:onClick="onClickMenu"
            android:nestedScrollingEnabled="false" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButtonPlace"
            android:background="#00e53535"
            android:src="@drawable/menu_icon"
            android:contentDescription="@string/list_menu_icon"
            android:nestedScrollingEnabled="false"
            android:onClick="onClickMenu" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/menu_place"
            android:id="@+id/textViewPlace"
            android:textSize="35sp"
            android:textIsSelectable="false"
            android:textAlignment="center"
            android:gravity="center_vertical"
            android:onClick="onClickMenu"
            android:nestedScrollingEnabled="false" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButtonTheme"
            android:background="#00e53535"
            android:src="@drawable/menu_icon"
            android:contentDescription="@string/list_menu_icon"
            android:nestedScrollingEnabled="false"
            android:onClick="onClickMenu" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/menu_theme"
            android:id="@+id/textViewTheme"
            android:textSize="35sp"
            android:textIsSelectable="false"
            android:textAlignment="center"
            android:gravity="center_vertical"
            android:onClick="onClickMenu"
            android:nestedScrollingEnabled="false" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButtonDelete"
            android:background="#00e53535"
            android:src="@drawable/menu_icon"
            android:contentDescription="@string/list_menu_icon"
            android:nestedScrollingEnabled="false"
            android:onClick="onClickMenu" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/menu_deleteall"
            android:id="@+id/textViewDelete"
            android:textSize="35sp"
            android:textIsSelectable="false"
            android:textAlignment="center"
            android:gravity="center_vertical"
            android:onClick="onClickMenu"
            android:nestedScrollingEnabled="false" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButtonAbout"
            android:background="#00e53535"
            android:src="@drawable/menu_icon"
            android:contentDescription="@string/list_menu_icon"
            android:nestedScrollingEnabled="false"
            android:onClick="onClickAbout" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/menu_about"
            android:id="@+id/textViewAbout"
            android:textSize="35sp"
            android:textIsSelectable="false"
            android:textAlignment="center"
            android:gravity="center_vertical"
            android:onClick="onClickAbout"
            android:nestedScrollingEnabled="false" />

    </LinearLayout>

</LinearLayout>
